# rust-api-example

./: Cargo.toml  readme.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/controllers/: user_controller.rs
src/middleware/: auth.rs
src/models/: user.rs
src/tests/: integration_tests.rs
src/utils/: mongo.rs
src/views/: mod.rs  user_views.rs
tests/: integration_tests.rs
