[package]
name = "rust-users"
version = "0.1.0"
authors = [ "Ryan Chenkie <ryanchenkie@gmail.com>" ]
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-service = "2.0"
env_logger = "0.10"
mongodb = "2.3"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "8.1"
futures-util = "0.3"
futures = "0.3.30"

[dev-dependencies]
actix-rt = "2.5.0"
actix-web = "4.0.0"
mongodb = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

